--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
   main:
     allow-been-definition-overriding: true
   h2-datasource:
-    jdbc-url: jdbc:h2:mem:test;MODE=MYSQL
-    username: username
-    password: password
+    jdbc-url: jdbc:h2:tcp://localhost/~/test
+    username: sa
+    password:
   pg-datasource:
     jdbc-url: jdbc:postgresql://localhost:5432/test
     username: username
